<resources>
    <string name="app_name">Assessment02</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel_label">Cancel</string>
    <string name="name_label">Name:</string>
    <string name="age_label">Age:</string>
    <string name="credit_score_label">Credit Score:</string>
    <string name="state_label">State:</string>
    <string name="na_label">N/A</string>
    <string name="select_label">Select</string>
    <string name="submit_label">Submit</string>
    <string name="sort_by_na">Sorted By: N/A</string>
    <string name="sort_by_name_ascending">Sort by name ascending</string>
    <string name="sort_by_credit_descending">Sort by credit descending</string>
    <string name="sort_by_credit_ascending">Sort by credit ascending</string>
    <string name="sort_by_name_descending">Sort by name descending</string>
</resources>